<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LoginActivity">

    <!-- <ImageView
        android:id="@+id/img_background"
        android:elevation="4dp"
        android:scaleType="fitXY"
        android:src="@drawable/background_app"
        android:contentDescription="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent" /> -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:contentDescription="@string/app_name"
            android:layout_above="@+id/card_login"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:src="@drawable/logo_rtaxi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.CardView
            android:id="@+id/card_login"
            app:cardElevation="4dp"
            app:cardCornerRadius="6dp"
            app:cardBackgroundColor="@color/colorAccent"
            android:layout_centerInParent="true"
            android:layout_width="230dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="20dp"
                android:gravity="center"
                android:layout_height="200dp"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/txt_placa"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="5dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:inputType="textEmailSubject"
                    android:hint="@string/lbl_user"
                    android:textColorHint="@color/divider"
                    android:text="@string/lbl_data_user"
                    android:textColor="@color/primaryText"
                    android:textSize="16sp"
                    android:background="@drawable/background_fields"
                    android:layout_width="match_parent"
                    android:layout_height="35dp" />
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />
                <EditText
                    android:id="@+id/txt_cedula"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="5dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:inputType="textPassword"
                    android:hint="@string/lbl_password"
                    android:textColorHint="@color/divider"
                    android:text="@string/lbl_data_pass"
                    android:textColor="@color/primaryText"
                    android:textSize="16sp"
                    android:background="@drawable/background_fields"
                    android:layout_width="match_parent"
                    android:layout_height="35dp" />
                <Button
                    android:id="@+id/but_login"
                    android:text="@string/but_login"
                    android:textColor="@color/icons"
                    android:textAllCaps="false"
                    android:background="@drawable/background_button_success"
                    android:layout_marginTop="20dp"
                    android:layout_width="100dp"
                    android:layout_height="35dp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <LinearLayout
            android:layout_below="@+id/card_login"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="80dp">
            <android.support.v7.widget.CardView
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                android:background="@drawable/background_button_neutro"
                android:padding="4dp"
                android:layout_width="55dp"
                android:layout_height="55dp">
                <LinearLayout
                    android:padding="4dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageButton
                        android:id="@+id/but_facebook"
                        android:layout_gravity="center"
                        android:contentDescription="@string/app_name"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_facebook"
                        android:scaleType="centerInside"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_margin="@dimen/fab_margin"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <Space
                android:layout_width="40dp"
                android:layout_height="30dp" />
            <android.support.v7.widget.CardView
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                android:background="@drawable/background_button_neutro"
                android:layout_width="55dp"
                android:layout_height="55dp">
                <LinearLayout
                    android:padding="4dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageButton
                        android:id="@+id/but_google"
                        android:layout_gravity="center"
                        android:contentDescription="@string/app_name"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_google"
                        android:scaleType="centerInside"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_margin="@dimen/fab_margin"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>