<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.CobroFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/fondo_cash"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/dinero" />

            <TextView
                android:id="@+id/valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="TextView"
                android:textColor="@color/secondaryText"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/cobro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cobro_en"
                android:textColor="@color/colorBlack"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tiempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="TextView"
                android:textColor="@color/secondaryText"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/distancia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="TextView"
                android:textColor="@color/azul_btn_carrer"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:foregroundGravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/califica"
            android:textColor="@color/azul_btn_carrer"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/nombre_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/colorBlack"
            android:textSize="22sp" />


        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/coment"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:minLines="1"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/azul_parte_sup" />

        <co.com.autolagos.rtaxi.local.driver.view.ColorRatingBar
            android:id="@+id/rating_1"
            style="@android:style/Widget.Material.Light.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:rating="4.5"
            android:scaleX="0.7"
            android:scaleY="0.7"

            app:empty_color="@color/azul_parte_sup"
            app:progress_color="@color/azul_btn_carrer" />


        <LinearLayout
            android:id="@+id/bnt_cerrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/boton_cerrar"
            android:foregroundGravity="center"
            android:gravity="center_horizontal|center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tomar_pago"
                android:textColor="@color/color_white" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>